<resources>
    <string name="app_name">Employees Manager</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_age">Age</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_address1">Address 1</string>
    <string name="hint_address2">Address 2</string>
    <string name="hint_address3">Address 3</string>
    <string name="delete">DELETE</string>
    <string name="save">SAVE</string>
</resources>