<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_cell_height"
    android:layout_marginTop="@dimen/margin_small"
    android:layout_marginBottom="@dimen/margin_small"
    android:layout_marginStart="@dimen/margin_default"
    android:layout_marginEnd="@dimen/margin_default"
    android:background="@drawable/shape_employee_cell_bg">
    <TextView
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_cell_name_height"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:paddingTop="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_small"
        android:text="@string/hint_last_name"
        android:textSize="@dimen/text_size_name"
        android:lines="2"
        android:ellipsize="end"
        android:gravity="center"
        android:textAlignment="gravity"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/age"
        android:layout_below="@id/firstName"
        android:layout_alignParentStart="true"
        android:layout_width="@dimen/list_cell_text_width"
        android:layout_height="@dimen/list_cell_text_height"
        android:layout_marginStart="@dimen/margin_default"
        android:paddingStart="@dimen/padding_default"
        android:paddingEnd="@dimen/padding_default"
        android:text="@string/hint_age"
        android:ellipsize="end"
        android:gravity="center_vertical|start"
        android:textAlignment="gravity"
        android:textColor="@color/gray"/>
    <TextView
        android:id="@+id/gender"
        android:layout_below="@id/firstName"
        android:layout_alignParentEnd="true"
        android:layout_width="@dimen/list_cell_text_width"
        android:layout_height="@dimen/list_cell_text_height"
        android:layout_marginEnd="@dimen/margin_default"
        android:paddingStart="@dimen/padding_default"
        android:paddingEnd="@dimen/padding_default"
        android:text="@string/hint_gender"
        android:ellipsize="end"
        android:gravity="center_vertical|end"
        android:textAlignment="gravity"
        android:textColor="@color/gray"/>
    <TextView
        android:id="@+id/address"
        android:layout_below="@id/age"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_cell_text_height"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:paddingStart="@dimen/padding_default"
        android:paddingEnd="@dimen/padding_default"
        android:text="@string/hint_address1"
        android:lines="1"
        android:ellipsize="end"
        android:gravity="center"
        android:textAlignment="gravity"
        android:textColor="@color/black"/>
</RelativeLayout>