<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primary_dark"
    tools:ignore="ContentDescription">

    <RelativeLayout
        android:id="@+id/canvas"
        android:layout_width="350dp"
        android:layout_height="490dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="90dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shape_employee_cell_bg">
        <ImageView
            android:id="@+id/imageView"
            android:src="@drawable/icon_avatar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_big"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstName"
            android:layout_below="@id/imageView"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:textStyle="bold">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_first_name"
                android:autofillHints=""
                android:inputType="text"
                android:textColor="@color/black"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastName"
            android:layout_below="@id/firstName"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:textStyle="bold">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_last_name"
                android:autofillHints=""
                android:inputType="text"
                android:textColor="@color/black"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gender"
            android:layout_below="@id/lastName"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:textStyle="bold">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_gender"
                android:autofillHints=""
                android:inputType="text"
                android:textColor="@color/black"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/age"
            android:layout_below="@id/gender"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:textStyle="bold">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_age"
                android:autofillHints=""
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/address1Layout"
            android:layout_below="@id/age"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="@dimen/margin_default"
                android:src="@drawable/icon_home1"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address1"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_address1"
                    android:autofillHints=""
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/address2Layout"
            android:layout_below="@id/address1Layout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="@dimen/margin_default"
                android:src="@drawable/icon_home2"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address2"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_address2"
                    android:autofillHints=""
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/address3Layout"
            android:layout_below="@id/address2Layout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="@dimen/margin_default"
                android:src="@drawable/icon_home3"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address3"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_address3"
                    android:autofillHints=""
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="52dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
        <Button
            android:layout_weight="1"
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@drawable/shape_save_button"
            android:text="@string/delete"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:padding="5dp"/>
        <Button
            android:layout_weight="1"
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@drawable/shape_save_button"
            android:text="@string/save"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textAllCaps="true"/>
    </LinearLayout>
</RelativeLayout>